--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -32,6 +32,20 @@ nalgebra = "0.32"
 ndarray = "0.15"
 ndarray-linalg = "0.16"
 
+# Time handling
+chrono = { version = "0.4", features = ["serde"] }
+
+# High-performance collections
+dashmap = "5.5"
+parking_lot = "0.12"
+
+# Optimization
+osqp = "0.6"
+sprs = "0.11"
+
+# Parallel computation
+rayon = "1.8"
+
 # Logging
 tracing = "0.1"
 tracing-subscriber = { version = "0.3", features = ["json"] }
